# LibWacom

./: .pmake-project  CMakeLists.txt  CMakePresets.json  README.md  configure.py
LibWacom/: CMakeLists.txt
LibWacom/include/libwacom/: CMakeLists.txt  Command.hpp  Device.hpp
LibWacom/source/: CMakeLists.txt  Command.cpp  Device.cpp
cmake/: LibWacomConfig.cmake  enable_tests.cmake
tests/example/: CMakeLists.txt
